<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
    <TextView
        android:id="@+id/login_text"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/login"
        android:textSize="20sp" />
        </TableRow>

        <TableRow>
    <android.support.design.widget.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/kullancı_adı"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin"
            android:layout_margin="2dp"/>
    </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
    <android.support.design.widget.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_margin="2dp"/>
    </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
    <android.support.design.widget.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/ad"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ad"
            android:layout_margin="2dp"/>
    </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
    <android.support.design.widget.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/soyad"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/soyad"
            android:layout_margin="2dp"/>
    </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
    <android.support.design.widget.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/tc_kimlik_No"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tc_kimlikno"
            android:layout_margin="2dp"/>
    </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
    <android.support.design.widget.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/telefon"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefon"
            android:layout_margin="2dp"/>
    </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
    <android.support.design.widget.TextInputLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:id="@+id/e-mail"
        android:layout_margin="5dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:layout_margin="2dp"/>
    </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow>
            <RelativeLayout>
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_margin="5dp"
        android:layout_marginStart="100dp"
        android:onClick="CleanAll"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_toEndOf="@+id/cancel_button"
        android:layout_margin="5dp"
        android:onClick="ResimBilgilerininKayidi"/>
            </RelativeLayout>
        </TableRow>

    </TableLayout>

</ScrollView>