<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DersDetayActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow>
        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/ders"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/ogrencisayi"/>

        <TextView
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:text="@string/dersnoteortalama"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:id="@+id/ders_adi"/>

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/ogrenci_sayi" />

            <TextView
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:id="@+id/ders_ortalama" />
        </TableRow>

    </TableLayout>

</RelativeLayout>